crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__trace_config_Silent_true.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 602
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : unit\nmain = trace \"hello\" (assert False)\n"
---
--- unoptimized Core
let fromBool#2 : bool -> bool = \value#3 : bool -> value#3 in
let main#1 : unit = case@Bool fromBool#2 false of
  True -> ()
  False -> error in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_2
    [(lam main_1 main_1) (case [fromBool_2 (con bool False)] (error) (con unit ()))])
    (lam value_3 value_3)])
--- optimized Core
case@Bool false of
  True -> ()
  False -> error
--- optimized UPLC
(program 1.1.0 (case (con bool False) (error) (con unit ())))
--- result
error: ExplicitErrorTerm
--- logs
[]
--- budget
cpu: 100, memory: 100
