crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__trace_config_Verbose_false.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 602
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : unit\nmain = trace \"hello\" (assert False)\n"
---
--- unoptimized Core
let message#6 : string = "hello" in
let message#7 : string = "assertion failed" in
let fromBool#2 : bool -> bool = \value#4 : bool -> value#4 in
let fromString#3 : string -> string = \value#5 : string -> value#5 in
let main#1 : unit = trace (fromString#3 message#6) in case@Bool fromBool#2 false of
  True -> ()
  False -> trace message#7 in error in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_6
    [(lam message_7
      [(lam fromBool_2
        [(lam fromString_3
          [(lam main_1 main_1)
            (force
              [[(force (builtin trace)) [fromString_3 message_6]]
                (delay
                  (case
                    [fromBool_2 (con bool False)]
                    (force [[(force (builtin trace)) message_7] (delay (error))])
                    (con unit ())))])])
          (lam value_5 value_5)])
        (lam value_4 value_4)])
      (con string "assertion failed")])
    (con string "hello")])
--- optimized Core
trace "hello" in case@Bool false of
  True -> ()
  False -> trace "assertion failed" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force
      [[builtin_1 (con string "hello")]
        (delay
          (case
            (con bool False)
            (force [[builtin_1 (con string "assertion failed")] (delay (error))])
            (con unit ())))]))
    (force (builtin trace))])
--- result
error: ExplicitErrorTerm
--- logs
["hello", "assertion failed"]
--- budget
cpu: 119096, memory: 164
