crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__trait_free_polymorphic_recursion_reuses_the_opaque_body.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 333
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype option 'a = None | Some 'a\nplain : 'a -> unit\nplain x = plain (Some x)\nmain = plain ()\n"
---
--- unoptimized Core
letrec
  plain#2 : 'erased -> unit [static []] = \x#4 : 'erased -> plain#2 ((\field#5 : 'erased -> constr 1 field#5) x#4)
in
let fromUnit#3 : unit -> unit = \value#6 : unit -> value#6 in
let main#1 : unit = plain#2 (fromUnit#3 ()) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam plain_2
    [(lam fromUnit_3 [(lam main_1 main_1) [plain_2 [fromUnit_3 (con unit ())]]])
      (lam value_6 value_6)])
    [(lam self_7 [self_7 self_7])
      (lam self_7 (lam x_4 [[self_7 self_7] [(lam field_5 (constr 1 field_5)) x_4]]))]])
--- optimized Core
letrec
  plain#7 : 'erased -> unit [static []] = \x#8 : 'erased -> let anf#13 : Main.option 'erased = constr 1 x#8 in
  plain#7 anf#13
in
plain#7 ()
--- optimized UPLC
(program 1.1.0
  [(lam plain_9 [plain_9 (con unit ())])
    [(lam self_3 [self_3 self_3])
      (lam self_4 (lam x_5 [(lam anf_6 [[self_4 self_4] anf_6]) (constr 1 x_5)]))]])
