crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__transparent_alias_method_variables_are_matched_after_expansion.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype alias identity 'b = 'b\ntrait Keep 'a where\n    keep : 'a -> identity 'b -> identity 'b\nimpl Keep unit where\n    keep _ x = x\nraw : unit\nraw = ()\nmain : unit\nmain = keep () raw\n"
---
--- unoptimized Core
let keep#2 : unit -> 'erased -> 'erased = \arg#5 : unit x#6 : 'erased -> let match#7 : unit = arg#5 in
x#6 in
let fromUnit#3 : unit -> unit = \value#8 : unit -> value#8 in
let raw#4 : unit = fromUnit#3 () in
let main#1 : unit = keep#2 (fromUnit#3 ()) raw#4 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam keep_2
    [(lam fromUnit_3
      [(lam raw_4 [(lam main_1 main_1) [[keep_2 [fromUnit_3 (con unit ())]] raw_4]])
        [fromUnit_3 (con unit ())]])
      (lam value_8 value_8)])
    (lam arg_5 (lam x_6 (case arg_5 x_6)))])
--- optimized Core
()
--- optimized UPLC
(program 1.1.0 (con unit ()))
--- result
(con unit ())
--- logs
[]
--- budget
cpu: 432100, memory: 2800
